static/css/main.css
/* ... */
.company .more-like-this-button {
    padding: 6px 12px;
    font-size: 1em;
    background: var(--primary-bg);
    cursor: pointer;
    border-radius: 6px;
    border: 0;
    color: var(--primary-text);
	transition: background .1s;
    margin: 0;
    margin-top: 12px;
}

.company .more-like-this-button:hover {
	background: var(--hover-bg);
}

.company .more-like-this-button:active {
	background: var(--active-bg);
}

footer {
	margin-top: 32px;
    margin-bottom: 52px;
}

footer p {
	max-width: 64ch;
	color: var(--secondary-text);
	line-height: 1.5em;
}

footer a {
	color: inherit;
}

footer a:hover {
    color: var(--primary-text);
}

.loading {
    width: calc(100% - 32px);
    max-width: 320px;
    flex-grow: 1;
    margin: 48px auto 32px auto;
    height: 3px;
    position: relative;
    background: var(--secondary-text);
	color: transparent;
    overflow: hidden;
}

@keyframes slider {
    0% {
        transform: translateX(-100%);
    }
    100% {
        transform: translateX(100%);
    }
}

.loading::after {
    content: '';
    display: block;
    height: 100%;
    width: 60%;
    padding-right: 40%;
    background: var(--primary-text);
    position: absolute;
    top: 0;
    left: 0;
    animation: slider 1s linear infinite;
}

.loading.loading-search {
	margin: 64px auto;
}

.mobile {
    display: none;
}

@media only screen and (max-width: 800px) {
    .company .company-name-batch {
        min-width: 20ch;
    }
}

@media only screen and (max-width: 600px) {
    .desktop {
        display: none;
    }

    .mobile {
        display: initial;
    }

    .company {
        flex-direction: column;
        gap: 2px;
        margin-bottom: 16px;
    }

    .company.company-expanded {
        width: calc(100% + 16px);
        left: -8px;
    }

    .company .company-name-batch {
        gap: 12px;
        width: 100%;
        justify-content: space-between;
    }

    .company .company-name-batch-tags {
        margin-bottom: 16px;
    }

    .company .company-name {
        flex-grow: 1;
    }

	.company .company-name-batch-meta {
		padding-left: 0;
	}

	/* autocomplete dropdown positioning */
	form .search-autocomplete-group {
		position: initial;
	}
	form .search-input-row {
		position: relative;
	}
}

